-made game not hidef

--- a/HeartbeatGlobalGameJam2013/HeartbeatGlobalGameJam2013/HeartbeatGlobalGameJam2013/HeartbeatGlobalGameJam2013.csproj
+++ b/HeartbeatGlobalGameJam2013/HeartbeatGlobalGameJam2013/HeartbeatGlobalGameJam2013/HeartbeatGlobalGameJam2013.csproj
@@ -8,12 +8,12 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HeartbeatGlobalGameJam2013</RootNamespace>
-    <AssemblyName>HeartbeatGlobalGameJam2013</AssemblyName>
+    <AssemblyName>Heart Attack</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <XnaFrameworkVersion>v4.0</XnaFrameworkVersion>
     <XnaPlatform>Windows</XnaPlatform>
-    <XnaProfile>HiDef</XnaProfile>
+    <XnaProfile>Reach</XnaProfile>
     <XnaCrossPlatformGroupID>7bd82a28-5528-4761-9282-100bb553cafc</XnaCrossPlatformGroupID>
     <XnaOutputType>Game</XnaOutputType>
     <ApplicationIcon>Game.ico</ApplicationIcon>
